--- a/style.css
+++ b/style.css
@@ -10,3 +10,13 @@ p {
     color: white;
     font-family: 'Montserrat', sans-serif;
 }
+
+ul {
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+}
+
+li  {
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+}
