--- a/style.css
+++ b/style.css
@@ -20,3 +20,13 @@ li  {
     color: white;
     font-family: 'Montserrat', sans-serif;
 }
+
+th  {
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+}
+
+tr  {
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+}
